feat: In progress of adding sets to ecercise instances
