# backend/internal/app/fitness-trainer/api/routine/remove_set_from_exerice.go
@@ -2,6 +2,7 @@ package routine
 
 import (
 	"context"
+	"fitness-trainer/internal/app/interceptors"
 	"fitness-trainer/internal/domain"
 	desc "fitness-trainer/pkg/workouts"
 	"fmt"
@@ -19,5 +20,30 @@ func (i *Implementation) RemoveSetFromExerciseInstance(ctx context.Context, in *
 	if err := in.Validate(); err != nil {
 		return nil, fmt.Errorf("%w: %w", domain.ErrInvalidArgument, err)
 	}
-	return nil, status.Error(codes.Unimplemented, "not implemented")
+	
+	routineID, err := domain.ParseID(in.RoutineId)
+	if err != nil {
+		return nil, fmt.Errorf("%w: %w", domain.ErrInvalidArgument, err)
+	}
+
+	exerciseInstanceID, err := domain.ParseID(in.ExerciseInstanceId)
+	if err != nil {
+		return nil, fmt.Errorf("%w: %w", domain.ErrInvalidArgument, err)
+	}
+
+	setID, err := domain.ParseID(in.SetId)
+	if err != nil {
+		return nil, fmt.Errorf("%w: %w", domain.ErrInvalidArgument, err)
+	}
+
+	userID, ok := interceptors.GetUserID(ctx)
+	if !ok {
+		return nil, status.Error(codes.Unauthenticated, "user id not found in context")
+	}
+
+	if err := i.service.RemoveSetFromExerciseInstance(ctx, userID, routineID, exerciseInstanceID, setID); err != nil {
+		return nil, err
+	}
+
+	return &emptypb.Empty{}, nil
 }
