# backend/internal/app/fitness-trainer/api/routine/service.go
@@ -16,7 +16,12 @@ type Service interface {
 	DeleteRoutine(ctx context.Context, id domain.ID) error
 
 	AddExerciseToRoutine(ctx context.Context, routineID domain.ID, exerciseID domain.ID) (domain.ExerciseInstance, error)
+	GetExerciseInstance(ctx context.Context, userID, routineID, exerciseInstanceID domain.ID) (dto.ExerciseInstanceDetailsDTO, error)
 	RemoveExerciseInstanceFromRoutine(ctx context.Context, userID, routineID, exerciseInstanceID domain.ID) error
+
+	AddSetToExerciseInstance(ctx context.Context, userID, routineID, exerciseInstanceID domain.ID, dto dto.CreateSetDTO) (domain.Set, error)
+	RemoveSetFromExerciseInstance(ctx context.Context, userID, routineID, exerciseInstanceID, setID domain.ID) error
+	UpdateSetInExerciseInstance(ctx context.Context, userID, routineID, exerciseInstanceID, setID domain.ID, dto dto.UpdateSetDTO) (domain.Set, error)
 }
 
 type Implementation struct {
