# backend/internal/domain/dto/set.go
@@ -1,0 +1,21 @@
+package dto
+
+import (
+	"fitness-trainer/internal/domain"
+	"fitness-trainer/internal/utils"
+	"time"
+)
+
+type CreateSetDTO struct {
+	ExerciseInstanceID domain.ID
+	SetType            domain.SetType
+	Reps               utils.Nullable[int]
+	Weight             utils.Nullable[float32]
+	Time               utils.Nullable[time.Duration]
+}
+
+type UpdateSetDTO struct {
+	Reps   utils.Nullable[int]
+	Weight utils.Nullable[float32]
+	Time   utils.Nullable[time.Duration]
+}
